[gd_scene load_steps=4 format=2]

[ext_resource path="res://World.tscn" type="PackedScene" id=1]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://SceneManager.gd" type="Script" id=3]

[node name="SceneManager" type="Node2D"]
script = ExtResource( 3 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="World" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]

[connection signal="conversation" from="CurrentScene/World/YSort/Demon" to="." method="_on_Demon_conversation"]
[connection signal="transition" from="TransitionScreen" to="." method="_on_TransitionScreen_transition"]

[editable path="CurrentScene/World"]
